enabled JVM preview features